fixed components/contact spacing

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -86,7 +86,8 @@ ul {
 
 @media screen and (min-width: 0px) and (max-width: 1023px) {
   .about-main-container {
-    margin-bottom: 25%;
+    height: 100%;
+    margin-bottom: 17%;
   }
 
   .about-label {
