--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,11 +1,12 @@
 .contact-main-container {
+  height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 19.5%;
-  margin-bottom: 20%;
+  gap: 15px;
 }
 
 .contact-header {
@@ -14,7 +15,6 @@
   font-weight: bold;
   font-size: 70px;
   color: #ccd6f6;
-  margin-bottom: 15px;
 }
 
 .contact-description {
@@ -23,9 +23,7 @@
   font-weight: 300;
   font-size: 20px;
   color: #8892b0;
-  padding-left: 20%;
-  padding-right: 20%;
-  margin-bottom: 15px;
+  padding: 0 20%;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1023px) {
